--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,12 @@
 // colors
-$primary-color: red;
+$grey: grey;
+
 
 // paddings
 $pd-xxs: 2px;
 $pd-xs: 4px;
 $pd-s: 8px;
 $pd-m: 16px;
+
+// font-sizes
+$fs-m: 16px;
