--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -1,3 +1,7 @@
 .page {
-  padding: $pd-s;
+  display: flex;
+  flex-direction: column;
+  background-color: $grey50;
+  width: 100%;
+  height: 100%;
 }
