--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,46 @@
+@import "@nextcss/reset";
+
 body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  font-size: $fs-m;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  font-family: $inter;
+  font-size: $fs-s;
+}
+
+#__next {
+  width: 100%;
+  height: 100%;
+}
+
+a[href],
+input[type="submit"],
+input[type="image"],
+label[for],
+select,
+button {
+  cursor: pointer;
+}
+
+input {
+  font-family: $inter;
+}
+
+h1 {
+  font-family: $manrope;
+  font-weight: 700;
+  font-size: $fs-xl;
+  line-height: $lh-xl;
+  margin: 0;
+}
+
+h5 {
+  font-weight: $fs-s;
+  font-weight: 400;
+  margin: 0;
 }
