first working connection with BE

--- a/src/components/Preview/Preview.module.scss
+++ b/src/components/Preview/Preview.module.scss
@@ -1,3 +1,11 @@
 .preview {
-  // TODO: implement some UI
+  width: 100%;
+
+  .date {
+    margin-bottom: $pd-l;
+  }
+
+  .title {
+    margin-bottom: $pd-s;
+  }
 }
