--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   transform: translateY(-10%);
+  text-align: center;
 
   h1 {
     padding-bottom: $pd-m;
