--- a/src/pages/search/Search.module.scss
+++ b/src/pages/search/Search.module.scss
@@ -4,14 +4,9 @@
   display: flex;
   overflow-x: hidden;
   padding: 0 $pd-l;
-
-  form {
-    padding-bottom: $pd-l;
-  }
 }
 
-.results {
-  background-color: $white;
+.leftColumn {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -21,9 +16,20 @@
   width: 50%;
   padding: $pd-l;
   height: 100%;
+
+  & > div {
+    width: 100%;
+  }
 }
 
-.preview {
+.rightColumn {
+  background-color: $white;
   padding: $pd-l;
+  width: 100%;
   height: 100%;
+
+  .preview {
+    padding: $pd-xxl;
+    height: 100%;
+  }
 }
