--- a/src/components/Result/Result.module.scss
+++ b/src/components/Result/Result.module.scss
@@ -1,12 +1,59 @@
 .result {
+  position: relative;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-
-  padding: $pd-m;
+  padding: $pd-m $pd-xs;
   margin: $pd-xs 0;
 
-  p {
-    font-weight: 700;
+  border-bottom: 1px solid $grey200;
+
+  &:last-of-type {
+    border-bottom: none;
   }
+}
+
+.passiveContent {
+  margin-left: 0;
+  transition: margin-left 0.2s;
+}
+
+.activeContent {
+  margin-left: $pd-m;
+  transition: margin-left 0.2s;
+}
+
+.meta {
+  font-weight: 400;
+  font-size: $fs-xs;
+  margin-bottom: $upd-xs;
+
+  span {
+    margin-right: $upd-s;
+  }
+}
+
+.stats {
+  font-size: $fs-xxs;
+  margin-top: $pd-s;
+
+  .statSeperator {
+    margin: 0 $pd-xs;
+  }
+}
+
+.title {
+  font-weight: 700;
+}
+
+.arrow {
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(0%, -50%);
+  transition: transform 0.6s;
+}
+
+.activeArrow {
+  opacity: 1;
+  transform: translate(100%, -50%);
 }
