--- a/src/pages/search/Search.module.scss
+++ b/src/pages/search/Search.module.scss
@@ -3,33 +3,16 @@
   height: 100%;
   display: flex;
   overflow-x: hidden;
-  padding: 0 $pd-l;
 }
 
-.leftColumn {
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-shrink: 0;
+.column {
+  padding: $pd-xl $pd-xxxxl;
+  height: 100%;
   width: 50%;
-  padding: $pd-l;
-  height: 100%;
-
-  & > div {
-    width: 100%;
-  }
+  flex-shrink: 0;
+  overflow-y: auto;
 }
 
-.rightColumn {
-  background-color: $white;
-  padding: $pd-l;
-  width: 100%;
-  height: 100%;
-
-  .preview {
-    padding: $pd-xxl;
-    height: 100%;
-  }
+.noResults {
+  margin-top: $pd-xxxxl;
 }
